--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,4 @@
 <div style="width: 10rem">
   <app-sensor [min]="0" [max]="100" [value]="this.value"></app-sensor>
+  <h3 class="info">{{value}}<span>&#176;</span>C</h3>
 </div> 
